upgrading demo server with marks changes and testing automated build/deployment to demo server

--- a/apps/config/form.conf
+++ b/apps/config/form.conf
@@ -23,206 +23,39 @@ elements.reset.options.decorators.options.decorator = "ViewHelper"
 elements.reset.options.decorators.opt.decorator = "HtmlTag"
 elements.reset.options.decorators.opt.options.tag = "dd"
 
-
-[config]
-method = "post"
-elementFilters.trim = "StringTrim"
-elementFilters.tags = "StripTags"
-
-elements.system_name.type = "text"
-elements.system_name.options.label = "System Name"
-elements.system_name.options.validators.strlen.validator = "StringLength"
-elements.system_name.options.required = true
-
-elements.max_absent_time.type = "text"
-elements.max_absent_time.options.label = "Inactive Account Expiration Period (days)"
-elements.max_absent_time.options.validators.alnum.validator = "Digits"
-elements.max_absent_time.options.validators.strlen.validator = "StringLength"
-elements.max_absent_time.options.validators.strlen.options.min = "1"
-elements.max_absent_time.options.validators.strlen.options.max = "10"
-elements.max_absent_time.options.required = true
-
-elements.failure_threshold.type = "text"
-elements.failure_threshold.options.label = "Maximum Login Attempts Before Server Locks Account"
-elements.failure_threshold.options.validators.alnum.validator = "Digits"
-elements.failure_threshold.options.validators.strlen.validator = "StringLength"
-elements.failure_threshold.options.validators.strlen.options.min = "1"
-elements.failure_threshold.options.validators.strlen.options.max = "10"
-elements.failure_threshold.options.required = true
-
-elements.expiring_seconds.type = "text"
-elements.expiring_seconds.options.label = "Session Timeout Limit (minutes)"
-elements.expiring_seconds.options.validators.alnum.validator = "Digits"
-elements.expiring_seconds.options.validators.strlen.validator = "StringLength"
-elements.expiring_seconds.options.validators.strlen.options.min = "1"
-elements.expiring_seconds.options.validators.strlen.options.max = "10"
-elements.expiring_seconds.options.required = true
-
-elements.unlock_enabled.type = "checkbox"
-elements.unlock_enabled.options.label = "Enable Automated Account Unlock"
-elements.unlock_enabled.options.validators.alnum.validator = "Digits"
-elements.unlock_enabled.options.validators.strlen.validator = "StringLength"
-elements.unlock_enabled.options.validators.between.validator = "between"
-elements.unlock_enabled.options.validators.between.options.min = "0"
-elements.unlock_enabled.options.validators.between.options.max = "1"
-
-
-elements.unlock_duration.type = "text"
-elements.unlock_duration.options.label = "Automated Account Unlock Duration (minutes)"
-elements.unlock_duration.options.validators.alnum.validator = "Digits"
-elements.unlock_duration.options.validators.strlen.validator = "StringLength"
-elements.unlock_duration.options.validators.strlen.options.min = "1"
-elements.unlock_duration.options.validators.strlen.options.max = "10"
-elements.unlock_duration.options.required = true
-
-elements.auth_type.type = "select"
-elements.auth_type.options.label = "Authentication Method"
-elements.auth_type.options.multiOptions.database = "database"
-elements.auth_type.options.multiOptions.ldap = "ldap"
-elements.auth_type.options.validators.alnum.validator = "NotEmpty"
-elements.auth_type.options.validators.strlen.validator = "StringLength"
-elements.auth_type.options.validators.strlen.options.min = "1"
-elements.auth_type.options.validators.strlen.options.max = "10"
-elements.auth_type.options.required = true
-
-elements.rob_duration.type = "text"
-elements.rob_duration.options.label = "Rules Of Behavior Period (days)"
-elements.rob_duration.options.validators.alnum.validator = "Digits"
-elements.rob_duration.options.validators.strlen.validator = "StringLength"
-elements.rob_duration.options.validators.strlen.options.min = "1"
-elements.rob_duration.options.validators.strlen.options.max = "10"
-elements.rob_duration.options.required = true
-
-elements.use_notification.type = "textarea"
-elements.use_notification.options.label = "System Use Notification"
-elements.use_notification.options.validators.strlen.validator = "StringLength"
-elements.use_notification.options.validators.strlen.options.min = "1"
-elements.use_notification.options.cols = "100"
-elements.use_notification.options.rows = "7"
-elements.use_notification.options.required = true
-
-elements.behavior_rule.type = "textarea"
-elements.behavior_rule.options.label = "Rules Of Behavior"
-elements.behavior_rule.options.validators.strlen.validator = "StringLength"
-elements.behavior_rule.options.validators.strlen.options.min = "1"
-elements.behavior_rule.options.cols = "100"
-elements.behavior_rule.options.rows = "7"
-elements.behavior_rule.options.required = true
-
-elements.submit.type = "submit"
-elements.submit.options.label = "save changes"
-elements.submit.options.decorators.options.decorator = "ViewHelper"
-elements.submit.options.decorators.opt.decorator = "HtmlTag"
-elements.submit.options.decorators.opt.options.tag = "span"
-
-elements.reset.type = "reset"
-elements.reset.options.label = "clear changes"
-elements.reset.options.decorators.options.decorator = "ViewHelper"
-elements.reset.options.decorators.opt.decorator = "HtmlTag"
-elements.reset.options.decorators.opt.options.tag = "dd"
-
-[privacy]
-method = "post"
-elementFilters.trim = "StringTrim"
-elementFilters.tags = "StripTags"
-
-elements.privacy_policy.type = "textarea"
-;elements.privacy_policy.options.label = "Privacy Policy"
-elements.privacy_policy.options.validators.strlen.validator = "StringLength"
-elements.privacy_policy.options.validators.strlen.options.min = "1"
-elements.privacy_policy.options.cols = "180"
-elements.privacy_policy.options.rows = "40"
-elements.privacy_policy.options.required = true
-
-elements.submit.type = "submit"
-elements.submit.options.label = "save changes"
-elements.submit.options.decorators.options.decorator = "ViewHelper"
-elements.submit.options.decorators.opt.decorator = "HtmlTag"
-elements.submit.options.decorators.opt.options.tag = "span"
-
-elements.reset.type = "reset"
-elements.reset.options.label = "clear changes"
-elements.reset.options.decorators.options.decorator = "ViewHelper"
-elements.reset.options.decorators.opt.decorator = "HtmlTag"
-elements.reset.options.decorators.opt.options.tag = "dd"
-
-[contact]
-method = "post"
-elementFilters.trim = "StringTrim"
-elementFilters.tags = "StripTags"
-
-elements.contact_name.type = "text"
-elements.contact_name.options.label = "Technical Support Name"
-elements.contact_name.options.validators.strlen.validator = "StringLength"
-elements.contact_name.options.validators.strlen.options.min = "1"
-elements.contact_name.options.validators.strlen.options.max = "30"
-elements.contact_name.options.required = true
-
-elements.contact_phone.type = "text"
-elements.contact_phone.options.label = "Technical Support Phone Number"
-elements.contact_phone.options.validators.strlen.validator = "StringLength"
-elements.contact_phone.options.validators.strlen.options.min = "1"
-elements.contact_phone.options.validators.strlen.options.max = "15"
-
-elements.contact_email.type = "text"
-elements.contact_email.options.label = "Technical Support Email Address"
-elements.contact_email.options.validators.alnum.validator = "EmailAddress"
-elements.contact_email.options.required = true
-
-elements.contact_subject.type = "text"
-elements.contact_subject.options.label = "Technical Support Email Subject Text"
-elements.contact_subject.options.validators.strlen.validator = "StringLength"
-elements.contact_subject.options.validators.strlen.options.min = "1"
-elements.contact_subject.options.validators.strlen.options.max = "30"
-elements.contact_subject.options.required = true
-
-elements.submit.type = "submit"
-elements.submit.options.label = "save changes"
-elements.submit.options.decorators.options.decorator = "ViewHelper"
-elements.submit.options.decorators.opt.decorator = "HtmlTag"
-elements.submit.options.decorators.opt.options.tag = "span"
-
-elements.reset.type = "reset"
-elements.reset.options.label = "clear changes"
-elements.reset.options.decorators.options.decorator = "ViewHelper"
-elements.reset.options.decorators.opt.decorator = "HtmlTag"
-elements.reset.options.decorators.opt.options.tag = "dd"
-
 [ldap]
 method = "post"
 elementFilters.trim = "StringTrim"
 elementFilters.tags = "StripTags"
 
 elements.host.type = "text"
-elements.host.options.label = "Server host"
-elements.host.options.separator = "&nbsp;"
-elements.host.options.multiOptions.ad = "Microsoft AD"
-elements.host.options.multiOptions.openldap = "OpenLDAP"
+elements.host.options.label = "Host"
 elements.host.options.validators.strlen.validator = "StringLength"
 elements.host.options.validators.strlen.options.min = "1"
 elements.host.options.validators.strlen.options.max = "40"
 elements.host.options.required = true
 
-elements.accountDomainName.type = "text"
-elements.accountDomainName.options.label = "AccountDomainName"
-elements.accountDomainName.options.validators.strlen.validator = "StringLength"
-elements.accountDomainName.options.validators.strlen.options.min = "1"
-elements.accountDomainName.options.validators.strlen.options.max = "50"
-elements.accountDomainName.options.required = true
-
-elements.accountDomainNameShort.type = "text"
-elements.accountDomainNameShort.options.label = "AccountDomainNameShort"
-elements.accountDomainNameShort.options.validators.strlen.validator = "StringLength"
-elements.accountDomainNameShort.options.validators.strlen.options.min = "1"
-elements.accountDomainNameShort.options.validators.strlen.options.max = "10"
-elements.accountDomainNameShort.options.required = true
-
 elements.port.type = "text"
-elements.port.options.label = "Server Port"
+elements.port.options.label = "Port"
 elements.port.options.validators.alnum.validator = "Digits"
 elements.port.options.validators.strlen.validator = "StringLength"
 elements.port.options.validators.strlen.options.min = "1"
 elements.port.options.validators.strlen.options.max = "10"
+
+elements.useSsl.type = "checkbox"
+elements.useSsl.options.label = "Use Secure Sockets Layer (SSL)"
+
+elements.useStartTls.type = "checkbox"
+elements.useStartTls.options.label = "Use Transport Layer Security (TLS)"
+
+elements.bindRequiresDn.type = "checkbox"
+elements.bindRequiresDn.options.label = "bind Requires Dn"
+
+elements.accountFilterFormat.type = "text"
+elements.accountFilterFormat.options.label = "Search Filter"
+elements.accountFilterFormat.options.validators.strlen.validator = "StringLength"
+elements.accountFilterFormat.options.validators.strlen.options.min = "1"
+elements.accountFilterFormat.options.validators.strlen.options.max = "50"
 
 elements.username.type = "text"
 elements.username.options.label = "Username"
@@ -236,20 +69,21 @@ elements.password.options.validators.strlen.validator = "StringLength"
 elements.password.options.validators.strlen.options.min = "1"
 elements.password.options.validators.strlen.options.max = "20"
 
+elements.accountDomainName.type = "text"
+elements.accountDomainName.options.label = "Account Domain Name"
+elements.accountDomainName.options.validators.strlen.validator = "StringLength"
+elements.accountDomainName.options.validators.strlen.options.min = "1"
+elements.accountDomainName.options.validators.strlen.options.max = "50"
+elements.accountDomainName.options.required = true
+
 elements.baseDn.type = "text"
-elements.baseDn.options.label = "BaseDn"
+elements.baseDn.options.label = "Base Distinguished Name"
 elements.baseDn.options.validators.strlen.validator = "StringLength"
 elements.baseDn.options.validators.strlen.options.min = "1"
 elements.baseDn.options.validators.strlen.options.max = "50"
 
-elements.accountFilterFormat.type = "text"
-elements.accountFilterFormat.options.label = "AccountFilterFormat"
-elements.accountFilterFormat.options.validators.strlen.validator = "StringLength"
-elements.accountFilterFormat.options.validators.strlen.options.min = "1"
-elements.accountFilterFormat.options.validators.strlen.options.max = "50"
-
 elements.accountCanonicalForm.type = "Select"
-elements.accountCanonicalForm.options.label = "accountCanonicalForm"
+elements.accountCanonicalForm.options.label = "account Canonical Form"
 elements.accountCanonicalForm.options.multiOptions.4 = "4-Principal"
 elements.accountCanonicalForm.options.multiOptions.3 = "3-BackSlash"
 elements.accountCanonicalForm.options.multiOptions.2 = "2-Username"
@@ -257,12 +91,6 @@ elements.accountCanonicalForm.options.multiOptions.1 = "1-DN"
 elements.accountCanonicalForm.options.validators.strlen.validator = "StringLength"
 elements.accountCanonicalForm.options.validators.strlen.options.min = "1"
 elements.accountCanonicalForm.options.validators.strlen.options.max = "1"
-
-elements.bindRequiresDn.type = "checkbox"
-elements.bindRequiresDn.options.label = "bindRequiresDn"
-
-elements.useSsl.type = "checkbox"
-elements.useSsl.options.label = "Use SSL"
 
 elements.SaveLdap.type = "submit"
 elements.SaveLdap.options.value = "submit"
@@ -274,57 +102,3 @@ elements.Reset.type = "reset"
 elements.Reset.options.decorators.options.decorator = "ViewHelper"
 elements.Reset.options.decorators.opt.decorator = "HtmlTag"
 elements.Reset.options.decorators.opt.options.tag = "dd"
-
-[notification]
-method = "post"
-elementFilters.trim = "StringTrim"
-elementFilters.tags = "StripTags"
-
-elements.sender.type = "text"
-elements.sender.options.label = "Send Email Address"
-elements.sender.options.size = 30
-elements.sender.options.validators.alnum.validator = "EmailAddress"
-elements.sender.options.required = true
-
-elements.subject.type = "text"
-elements.subject.options.label = "Email Subject"
-elements.subject.options.size = 30
-elements.subject.options.required = true
-
-elements.send_type.type = "select"
-elements.send_type.options.label = "Send Type"
-elements.send_type.options.multiOptions.sendmail = "sendmail"
-elements.send_type.options.multiOptions.smtp = "smtp"
-elements.send_type.options.required = true
-
-elements.smtp_host.type = "text"
-elements.smtp_host.options.label = "Smtp server name"
-elements.smtp_host.options.validators.alnum.validator = "Hostname"
-elements.smtp_host.options.size = 30
-
-elements.smtp_port.type = "text"
-elements.smtp_port.options.label = "Smtp server port"
-elements.smtp_port.options.validators.int.validator = "Int"
-elements.smtp_port.options.size = 30
-
-elements.smtp_username.type = "text"
-elements.smtp_username.options.label = "Username for smtp Authenticate"
-elements.smtp_username.options.size = 30
-
-elements.smtp_password.type = "password"
-elements.smtp_password.options.label = "Password for smtp Authenticate"
-elements.smtp_password.options.size = 30
-
-elements.submit.type = "submit"
-elements.submit.options.label = "save changes"
-elements.submit.options.size = 30
-elements.submit.options.decorators.options.decorator = "ViewHelper"
-elements.submit.options.decorators.opt.decorator = "HtmlTag"
-elements.submit.options.decorators.opt.options.tag = "span"
-
-elements.reset.type = "reset"
-elements.reset.options.label = "clear changes"
-elements.reset.options.size = 30
-elements.reset.options.decorators.options.decorator = "ViewHelper"
-elements.reset.options.decorators.opt.decorator = "HtmlTag"
-elements.reset.options.decorators.opt.options.tag = "dd"
