first draft of crud functionality for Categories and Sub Categories in in place

--- a/application/doctrine/schema/IrCategory.yml
+++ b/application/doctrine/schema/IrCategory.yml
@@ -16,3 +16,10 @@ IrCategory:
             type: enum
             length: 4
             values: ['CAT0','CAT1','CAT2','CAT3','CAT4','CAT5','CAT6']
+
+    relations:
+        IrSubCategories:
+            type: many
+            class: IrSubCategory
+            local: id
+            foreign: id 
