--- a/application/doctrine/schema/IrSubCategory.yml
+++ b/application/doctrine/schema/IrSubCategory.yml
@@ -12,3 +12,8 @@ IrSubCategory:
             type: string(255)
         description:
             type: string(1000) 
+
+    relations:
+        IrCategory:
+            local: id
+            foreign: id
