--- a/application/doctrine/schema/IrCategory.yml
+++ b/application/doctrine/schema/IrCategory.yml
@@ -18,8 +18,20 @@ IrCategory:
             values: ['CAT0','CAT1','CAT2','CAT3','CAT4','CAT5','CAT6']
 
     relations:
+        # IrSubCategories is a one-many relation
         IrSubCategories:
             type: many
             class: IrSubCategory
             local: id
             foreign: id 
+
+    actAs:
+        SoftDelete:
+        Timestampable:
+            created:
+                name: createdTs
+                type: timestamp
+            updated:
+                name: modifiedTs
+                type: timestamp
+
