Feature request on the IR branch: 2828168  Incident Reporting Module
timestamp defaults have been added

--- a/application/doctrine/schema/IrSteps.yml
+++ b/application/doctrine/schema/IrSteps.yml
@@ -4,6 +4,10 @@ IrSteps:
             type: integer
             primary: true
             autoincrement: true
+        createdTs: 
+            type: timestamp
+        modifiedTs: 
+            type: timestamp
         workflow_id: 
             type: integer
         role_id: 
@@ -14,3 +18,13 @@ IrSteps:
             type: string(255)
         description:
             type: string(1000) 
+
+    actAs:
+        SoftDelete:
+        Timestampable:
+            created:
+                name: createdTs
+                type: timestamp
+            updated:
+                name: modifiedTs
+                type: timestamp
