--- a/application/doctrine/schema/IrWorkflowDef.yml
+++ b/application/doctrine/schema/IrWorkflowDef.yml
@@ -4,7 +4,23 @@ IrWorkflowDef:
             type: integer
             primary: true
             autoincrement: true
+        createdTs: 
+            type: timestamp
+        modifiedTs: 
+            type: timestamp
         name: 
             type: string(255)
         description: 
             type: string(1000) 
+
+    actAs:
+        SoftDelete:
+        Timestampable:
+            created:
+                name: createdTs
+                type: timestamp
+            updated:
+                name: modifiedTs
+                type: timestamp
+
+
