--- a/application/doctrine/schema/IrSteps.yml
+++ b/application/doctrine/schema/IrSteps.yml
@@ -1,4 +1,6 @@
 IrSteps:
+    listeners: [XssListener]
+    
     columns:
         id: 
             type: integer
@@ -18,6 +20,8 @@ IrSteps:
             type: string(255)
         description:
             type: string(1000) 
+            extra: 
+                purify: html
 
     actAs:
         SoftDelete:
