--- a/application/doctrine/schema/IrSubCategory.yml
+++ b/application/doctrine/schema/IrSubCategory.yml
@@ -1,4 +1,6 @@
 IrSubCategory:
+    listeners: [XssListener]
+    
     columns:
         id: 
             type: integer
@@ -16,6 +18,8 @@ IrSubCategory:
             type: string(255)
         description:
             type: string(1000) 
+            extra: 
+                purify: html
 
     relations:
         IrCategory:
