--- a/application/doctrine/schema/IrWorkflowDef.yml
+++ b/application/doctrine/schema/IrWorkflowDef.yml
@@ -1,4 +1,6 @@
 IrWorkflowDef:
+    listeners: [XssListener]
+    
     columns:
         id: 
             type: integer
@@ -12,6 +14,8 @@ IrWorkflowDef:
             type: string(255)
         description: 
             type: string(1000) 
+            extra: 
+                purify: html
 
     actAs:
         SoftDelete:
