Feature request on the IR branch: OFJ-3 Incident Reporting Module
changed table columns from _ to camel case

--- a/application/doctrine/schema/IrIncidentObserver.yml
+++ b/application/doctrine/schema/IrIncidentObserver.yml
@@ -1,8 +1,8 @@
 IrIncidentObserver:
     columns:
-        incident_id: 
+        incidentId: 
             type: integer
-        user_id: 
+        userId: 
             type: integer
 
 
