--- a/application/doctrine/schema/IrIncidentWorkflow.yml
+++ b/application/doctrine/schema/IrIncidentWorkflow.yml
@@ -4,7 +4,7 @@ IrIncidentWorkflow:
             type: integer
             primary: true
             autoincrement: true
-        incident_id: 
+        incidentId: 
             type: integer
         name: 
             type: string(255)
@@ -22,5 +22,5 @@ IrIncidentWorkflow:
             type: string(1000) 
         attachment: 
             type: string(255)
-        user_id: 
+        userId: 
             type: integer
