--- a/application/doctrine/schema/IrIncidentActor.yml
+++ b/application/doctrine/schema/IrIncidentActor.yml
@@ -1,7 +1,7 @@
 IrIncidentActor:
     columns:
-        incident_id: 
+        incidentId: 
             type: integer
-        user_id: 
+        userId: 
             type: integer
 
