--- a/application/doctrine/data/fixtures/User.yml
+++ b/application/doctrine/data/fixtures/User.yml
@@ -5,3 +5,15 @@ User:
         email: openfisma@agency.gov
         nameFirst: Super
         nameLast: User
+    edcirc:
+        username: edcirc
+        password: 0p3nfism@
+        email: openfisma@agency.gov
+        nameFirst: Incident
+        nameLast: Manager
+    isso:
+        username: isso
+        password: 0p3nfism@
+        email: openfisma@agency.gov
+        nameFirst: Incident
+        nameLast: Manager
