Feature request on the IR branch: OFJ-3 Incident Reporting Module
some new data was added... these need much more work

--- a/application/doctrine/data/fixtures/Incident.yml
+++ b/application/doctrine/data/fixtures/Incident.yml
@@ -1,20 +1,29 @@
 Incident:
     new1:
-        additionalInfo: Incident with New status #1
+        additionalInfo: Description of test incident 1
         status: new 
     new2:
-        additionalInfo: Incident with New status #2
+        additionalInfo: Description of test incident 2
         status: new 
     new3:
-        additionalInfo: Incident with New status #3
+        additionalInfo: Description of test incident 3
         status: new 
     new4:
-        additionalInfo: Incident with New status #4
+        additionalInfo: Description of test incident 4
         status: new 
     new5:
-        additionalInfo: Incident with New status #5
+        additionalInfo: Description of test incident 5
         status: new 
     new6:
-        additionalInfo: Incident with New status #6
+        additionalInfo: Description of test incident 6
+        status: new 
+    new7:
+        additionalInfo: Description of test incident 7
+        status: new 
+    new8:
+        additionalInfo: Description of test incident 8
+        status: new 
+    new9:
+        additionalInfo: Description of test incident 9
         status: new 
 
