--- a/application/doctrine/data/fixtures/Role.yml
+++ b/application/doctrine/data/fixtures/Role.yml
@@ -3,7 +3,7 @@ Role:
         name: Information System Security Officer
         nickname: ISSO
         description: <p><strong>[NIST 800-37 Definition]</strong></p><p>The information system security officer is the individual responsible to the authorizing official, information system owner, or the senior agency information security officer for ensuring the appropriate operational security posture is maintained for an information system or program. The information system security officer also serves as the principal advisor to the authorizing official, information system owner, or senior agency information security officer on all matters (technical and otherwise) involving the security of the information system. The information system security officer typically has the detailed knowledge and expertise required to manage the security aspects of the information system and, in many agencies, is assigned responsibility for the day-to-day security operations of the system. This responsibility may also include, but is not limited to, physical security, personnel security, incident handling, and security training and awareness. The information system security officer may be called upon to assist in the development of the system security policy and to ensure compliance with that policy on a routine basis. In close coordination with the information system owner, the information system security officer often plays an active role in developing and updating the system security plan as well as in managing and controlling changes to the system and assessing the security impact of those changes.</p><p><strong>[OpenFISMA definition]</strong></p><p>The Information Systems Security Officer Group is designed to allow Information System Security Officers the ability to identify, assess, prioritize, and monitor the progress of corrective efforts for security weaknesses found in their system.</p>
-        Privileges: [areas_dashboard, areas_reports, findings_read, findings_update_type, findings_update_description, findings_update_course_of_action,  findings_update_control_assignment, findings_update_countermeasures, findings_update_finding_resources, findings_update_ecd, findings_upload_evidence, findings_mitigation_strategy_submit, findings_mitigation_strategy_revise, finding_mitigation_isso, finding_evidence_isso, notification_asset, notification_finding, system_read, system_update, asset_read, asset_update]        
+        Privileges: [areas_dashboard, areas_reports, findings_read, findings_update_type, findings_update_description, findings_update_course_of_action,  findings_update_control_assignment, findings_update_countermeasures, findings_update_finding_resources, findings_update_ecd, findings_upload_evidence, findings_mitigation_strategy_submit, findings_mitigation_strategy_revise, finding_mitigation_isso, finding_evidence_isso, notification_asset, notification_finding, system_read, system_update, asset_read, asset_update, incident_read, incident_classify, incident_reject, incident_resolve, incident_close, incident_create, incident_update, irworkflowdef_read, irworkflowdef_create, irworkflowdef_update, irworkflowdef_delete, ircategory_read, ircategory_update, ircategory_create, ircategory_delete, irreport_read, irreport_generate, irreport_export]        
 
     REVIEWER:
         name: Reviewer
@@ -57,41 +57,41 @@ Role:
         name: OIG Representative
         nickname: OIG
         description:
-        Privileges: [incident_read]
+        Privileges: [areas_dashboard, incident_read, incident_create]
 
     ED-CIRC:
         name: Incident Manager
-        nickname: ED-CIRC
+        nickname: EDCIRC
         description:
-        Privileges: [incident_read]
+        Privileges: [areas_dashboard, incident_read, incident_reject, incident_classify, incident_resolve, incident_close, incident_create, incident_update, ircategory_read, ircategory_update, ircategory_create, ircategory_delete, irworkflowdef_read, irworkflowdef_update, irworkflowdef_create, irworkflowdef_delete, irreport_read, irreport_generate, irreport_export]
 
     IRC:
         name: Incident Response Coordinator
         nickname: IRC
         description: 
-        Privileges: [incident_read]
+        Privileges: [areas_dashboard, incident_read, incident_create]
     
     DBR:
         name: Data Breach Representatives
         nickname: DBR
         description:
-        Privileges: [incident_read]
+        Privileges: [areas_dashboard, incident_read, incident_create]
    
     PA:
         name: Privacy Advocate
         nickname: PA
         description:
-        Privileges: [incident_read]
+        Privileges: [areas_dashboard, incident_read, incident_create]
         
     IRS:
         name: Incident Response Specialist
         nickname: IRS
         description:
-        Privileges: [incident_read]
+        Privileges: [areas_dashboard, incident_read, incident_create]
   
     HDR:
         name: Help Desk Representative
         nickname: HDR
         description:
-        Privileges: [incident_read]
+        Privileges: [areas_dashboard, incident_read, incident_create]
          
