Improvement on the performance branch: OFJ-111 Version control JS and CSS, and set far-future expiration dates Add a version to the configuration template, for versioning JS and CSS

--- a/application/config/app.conf.template
+++ b/application/config/app.conf.template
@@ -30,6 +30,9 @@
 ; Environment can be "production" or "development"
 environment = production
 
+; Version number of application
+version = 2.5.0
+
 ; Most deployments should run in production mode
 [production]
 session.name = OpenFISMA
