Improvement on the performance branch: OFJ-112 Cache doctrine queries Add in a cache listener, which adds useResultCache(true) to every DqlSelect, and invalidates the cache using expireResultCache(true) on DqlUpdate and DqlDelete. Adds the cache listener to all of the schema YML files. Since we're invalidating the cache on updates and deletes, this can be applied to every model safely.

--- a/application/doctrine/schema/AuditLog.yml
+++ b/application/doctrine/schema/AuditLog.yml
@@ -1,5 +1,5 @@
 AuditLog:
-    listeners: [XssListener]
+    listeners: [XssListener, CacheListener]
             
     columns:
         createdTs: timestamp
