--- a/application/doctrine/schema/Comment.yml
+++ b/application/doctrine/schema/Comment.yml
@@ -1,5 +1,5 @@
 Comment:
-    listeners: [XssListener]
+    listeners: [XssListener, CacheListener]
         
     columns:
         createdTs: timestamp
