--- a/application/doctrine/schema/Asset.yml
+++ b/application/doctrine/schema/Asset.yml
@@ -1,5 +1,5 @@
 Asset:
-    listeners: [XssListener, BaseListener]
+    listeners: [XssListener, CacheListener, BaseListener]
         
     columns:
         createdTs: timestamp
