--- a/application/doctrine/schema/EmailValidation.yml
+++ b/application/doctrine/schema/EmailValidation.yml
@@ -1,5 +1,5 @@
 EmailValidation:
-    listeners: [XssListener]
+    listeners: [XssListener, CacheListener]
         
     columns:
         email: 
