--- a/application/doctrine/schema/Finding.yml
+++ b/application/doctrine/schema/Finding.yml
@@ -1,5 +1,5 @@
 Finding:
-    listeners: [XssListener, FindingListener]
+    listeners: [XssListener, FindingListener, CacheListener]
     
     columns:
         createdTs: timestamp
