--- a/application/doctrine/schema/Network.yml
+++ b/application/doctrine/schema/Network.yml
@@ -1,5 +1,5 @@
 Network:
-    listeners: [XssListener, BaseListener]
+    listeners: [XssListener, BaseListener, CacheListener]
     
     columns:
         name: 
