--- a/application/doctrine/schema/System.yml
+++ b/application/doctrine/schema/System.yml
@@ -1,5 +1,5 @@
 System:
-    listeners: [XssListener, BaseListener, SystemListener]
+    listeners: [XssListener, BaseListener, SystemListener, CacheListener]
     
     columns:    
         type:
