--- a/application/doctrine/schema/User.yml
+++ b/application/doctrine/schema/User.yml
@@ -1,5 +1,5 @@
 User:
-    listeners: [XssListener, BaseListener, UserListener]
+    listeners: [XssListener, BaseListener, UserListener, CacheListener]
     
     columns:
         createdTs: timestamp
