Improvement on the performance branch OFJ-112 Cache doctrine queries Removing the result cache. Unreliable in the application due to our handling of queries between models. Out of scope of OFJ-112, perhaps schedule for integration when Doctrine 2.0 is stable and we refactor for that.

--- a/application/doctrine/schema/Asset.yml
+++ b/application/doctrine/schema/Asset.yml
@@ -1,5 +1,5 @@
 Asset:
-    listeners: [XssListener, CacheListener, BaseListener]
+    listeners: [XssListener, BaseListener]
         
     columns:
         createdTs: timestamp
