--- a/application/doctrine/schema/Product.yml
+++ b/application/doctrine/schema/Product.yml
@@ -1,5 +1,5 @@
 Product:
-    listeners: [XssListener, BaseListener, CacheListener]
+    listeners: [XssListener, BaseListener]
     
     columns:
         vendor:
