--- a/application/doctrine/schema/Source.yml
+++ b/application/doctrine/schema/Source.yml
@@ -1,5 +1,5 @@
 Source:
-    listeners: [XssListener, BaseListener, CacheListener]
+    listeners: [XssListener, BaseListener]
         
     columns:
         name: 
