--- a/application/doctrine/schema/Upload.yml
+++ b/application/doctrine/schema/Upload.yml
@@ -1,5 +1,5 @@
 Upload:
-    listeners: [XssListener, CacheListener]
+    listeners: [XssListener]
     
     columns:
         createdTs: timestamp
