--- a/application/doctrine/schema/AuditLog.yml
+++ b/application/doctrine/schema/AuditLog.yml
@@ -1,5 +1,5 @@
 AuditLog:
-    listeners: [XssListener, CacheListener]
+    listeners: [XssListener]
             
     columns:
         createdTs: timestamp
