--- a/application/doctrine/schema/Organization.yml
+++ b/application/doctrine/schema/Organization.yml
@@ -1,5 +1,5 @@
 Organization:    
-    listeners: [XssListener, BaseListener, CacheListener]
+    listeners: [XssListener, BaseListener]
 
     columns:
         createdTs: timestamp
