--- a/application/doctrine/schema/Role.yml
+++ b/application/doctrine/schema/Role.yml
@@ -1,5 +1,5 @@
 Role:
-    listeners: [XssListener, BaseListener, CacheListener]
+    listeners: [XssListener, BaseListener]
     
     columns:
         createdTs: timestamp
